--- a/mystyle.css
+++ b/mystyle.css
@@ -50,3 +50,30 @@ p {
     text-decoration: dashed;
 
 }
+@media (max-width: 600px) {
+    nav ul {
+        flex-direction: column;
+        align-items: center;
+    }
+    nav ul li {
+        margin: 0.5em 0;
+    }
+    main {
+        padding: 1em;
+    }
+}
+
+
+@media (min-width: 601px) and (max-width: 1024px) {
+    nav ul {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+}
+
+
+@media (min-width: 1025px) {
+    nav ul {
+        justify-content: center;
+    }
+}
